--- a/src/html/pages/search.html
+++ b/src/html/pages/search.html
@@ -257,7 +257,49 @@
 
   @@include('../tpl/footer-bar.htm')
 
-  @@include('../tpl/footer.htm', {"pageJsPath": ["pages/search"]})
+  <script id="search-result" type="text/html">
+    <% for(var i = 0; i < $data.length; i++){ %>
+      <% if ($data[i].type === 'article') { %>
+        <% for(var j = 0; j < $data[i].articles.length; j++){ %>
+          <div class="ad-article ui-border-b">
+            <a href="<%= $data[i].articles[j].url %>" class="hover-layer">
+              <img src="<%= $data[i].articles[j].img %>" alt="文章小图">
+              <div class="article-info">
+                <h3><%= $data[i].articles[j].title %></h3>
+                <div class="detail"><%= $data[i].articles[j].content %></div>
+                <div class="arrow-right"></div>
+              </div>
+            </a>
+          </div>
+        <% } %>
+        <% } else if ($data[i].type === 'product') { %>
+        <div class="products-list">
+          <ul>
+            <% for(var k = 0; k < $data[i].products.length; k++){ %>
+              <% if (k) { %>
+              <li class="ui-border-t">
+              <% } else { %>
+              <li>
+              <% } %>
+                <a href="<%= $data[i].products[k].url %>" class="product-detail-link hover-layer">
+                  <img src="<%= $data[i].products[k].img %>" alt="产品小图片">
+                  <div class="product-info-wrap">
+                    <h4><%= $data[i].products[k].title %></h4>
+                    <span><%= $data[i].products[k].content %></span>
+                  </div>
+                </a>
+                <a href="<%= $data[i].products[k].tmallUrl %>" class="tmall-link ui-border-l hover-layer">
+                  <i class="iconfont icon-buy"></i>
+                </a>
+              </li>
+            <% } %>
+          </ul>
+        </div>
+      <% } %>
+    <% } %>
+  </script>
+
+  @@include('../tpl/footer.htm', {"pageJsPath": ["plugins/template-web", "pages/search"]})
 </body>
 
 </html>
