--- a/src/html/pages/products.html
+++ b/src/html/pages/products.html
@@ -30,7 +30,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-02.png" alt="产品小图片">
-            <h3>便携手持风扇 F1</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 F1</h3>
             <div class="ui-nowrap-two">方便携带\可充电\三档可调\持久续航</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -41,7 +41,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-03.png" alt="产品小图片">
-            <h3>便携手持风扇 N9</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 N9</h3>
             <div class="ui-nowrap-two">三档可调\大风力\持久续航\方便携带\可充电</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -52,7 +52,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-04.png" alt="产品小图片">
-            <h3>超薄便携移动充 X8</h3>
+            <h3 class="ui-nowrap-one">超薄便携移动充 X8</h3>
             <div class="ui-nowrap-two">便携设计\双输入口\亲肤手感</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -63,7 +63,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-05.png" alt="产品小图片">
-            <h3>静音台式风扇 F2</h3>
+            <h3 class="ui-nowrap-one">静音台式风扇 F2</h3>
             <div class="ui-nowrap-two">三档可调大风力\持久续航\方便携带\可充电</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -74,7 +74,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-02.png" alt="产品小图片">
-            <h3>便携手持风扇 F1</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 F1</h3>
             <div class="ui-nowrap-two">方便携带\可充电\三档可调\持久续航</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -85,7 +85,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-03.png" alt="产品小图片">
-            <h3>便携手持风扇 N9</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 N9</h3>
             <div class="ui-nowrap-two">三档可调\大风力\持久续航\方便携带\可充电</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -96,7 +96,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-02.png" alt="产品小图片">
-            <h3>便携手持风扇 F1</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 F1</h3>
             <div class="ui-nowrap-two">方便携带\可充电\三档可调\持久续航</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -107,7 +107,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-03.png" alt="产品小图片">
-            <h3>便携手持风扇 N9</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 N9</h3>
             <div class="ui-nowrap-two">三档可调\大风力\持久续航\方便携带\可充电</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -118,7 +118,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-02.png" alt="产品小图片">
-            <h3>便携手持风扇 F1</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 F1</h3>
             <div class="ui-nowrap-two">方便携带\可充电\三档可调\持久续航</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -129,7 +129,7 @@
         <li>
           <a href="html/pages/product-detail.html" class="product-info-link hover-layer">
             <img src="image/6-03.png" alt="产品小图片">
-            <h3>便携手持风扇 N9</h3>
+            <h3 class="ui-nowrap-one">便携手持风扇 N9</h3>
             <div class="ui-nowrap-two">三档可调\大风力\持久续航\方便携带\可充电</div>
           </a>
           <a href="http://zmnxbc.com/s/CRuQV?tm=f873c4" class="tmall-link hover-layer">
@@ -140,7 +140,7 @@
       </ul>
     </section>
 
-    <button class="ui-btn-lg ui-btn-primary">
+    <button class="btn-more ui-btn-lg ui-btn-primary">
       MORE
       <i class="iconfont icon-arrow-down"></i>
     </button>
@@ -173,7 +173,25 @@
 
   @@include('../tpl/footer-bar.htm')
 
-  @@include('../tpl/footer.htm', {"pageJsPath": ["pages/products"]})
+  <script id="products" type="text/html">
+    <ul>
+      <% for(var i = 0; i < $data.length; i++){ %>
+        <li>
+          <a href="<%= $data[i].url %>" class="product-info-link hover-layer">
+            <img src="<%= $data[i].img %>" alt="产品小图片">
+            <h3 class="ui-nowrap-one"><%= $data[i].title %></h3>
+            <div class="ui-nowrap-two"><%= $data[i].content %></div>
+          </a>
+          <a href="<%= $data[i].tmallUrl %>" class="tmall-link hover-layer">
+            <i class="iconfont icon-buy"></i>
+            <span>购买</span>
+          </a>
+        </li>
+      <% } %>
+    </ul>
+  </script>
+
+  @@include('../tpl/footer.htm', {"pageJsPath": ["plugins/template-web", "pages/products"]})
 </body>
 
 </html>
